# Hackathon-2

./: .gitignore  LICENSE  README.md
Phase-1/: .gitignore  README.md  pyproject.toml
Phase-1/.claude/agents/: cli-ux-designer.md  python-impl.md  spec-author.md  spec-enforcer.md
Phase-1/.claude/skills/: sp.cli-design.md  sp.python-console.md  sp.requirement-clarify.md
Phase-1/.specify/memory/: constitution.md
Phase-1/history/prompts/1-basic-todo-operations/: 001-todo-operations-spec.spec.prompt.md  002-implementation-plan.plan.prompt.md  003-plan-artifacts.plan.prompt.md  004-task-breakdown.tasks.prompt.md  005-phase1-implementation.green.prompt.md  006-cli-enhancement.green.prompt.md
Phase-1/history/prompts/constitution/: 001-initial-constitution.constitution.prompt.md
Phase-1/specs/1-basic-todo-operations/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
Phase-1/specs/1-basic-todo-operations/checklists/: requirements.md
Phase-1/specs/1-basic-todo-operations/contracts/: cli-operations.md
Phase-1/src/: __init__.py  main.py
Phase-1/src/cli/: __init__.py  handlers.py  interactive.py
Phase-1/src/models/: __init__.py  task.py
Phase-1/tests/: __init__.py  test_handlers.py  test_task.py
Phase-2/: CLAUDE.md
Phase-2/backend/: README.md  requirements.txt
Phase-2/frontend/: package-lock.json  package.json
Phase-3/backend/: requirements.txt
Phase-3/frontend/: package-lock.json  package.json  tsconfig.json
Phase-4/: .gitignore  deploy-minikube.sh
Phase-4/backend/: Dockerfile  README.md  requirements.txt
Phase-5/: .gitignore
(+305 files in other folders)
