[project]
name = "todo-app"
version = "0.1.0"
description = "Phase 1 In-Memory Python Console Todo App"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
todo = "src.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
